WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74287
[Qt] Missing layoutTestController.dumpWillCacheResponse
https://bugs.webkit.org/show_bug.cgi?id=74287
Summary
[Qt] Missing layoutTestController.dumpWillCacheResponse
Nandor Huszka
Reported
2011-12-12 04:22:05 PST
I have implemented layoutTestController.dumpWillCacheResponse method on Qt.
Attachments
The patch itself with the implemented method and other necessary codes
(7.82 KB, patch)
2011-12-12 05:49 PST
,
Nandor Huszka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nandor Huszka
Comment 1
2011-12-12 05:49:46 PST
Created
attachment 118779
[details]
The patch itself with the implemented method and other necessary codes
Csaba Osztrogonác
Comment 2
2011-12-12 08:22:12 PST
Comment on
attachment 118779
[details]
The patch itself with the implemented method and other necessary codes LGTM, r=me.
WebKit Review Bot
Comment 3
2011-12-12 09:30:52 PST
Comment on
attachment 118779
[details]
The patch itself with the implemented method and other necessary codes Clearing flags on attachment: 118779 Committed
r102592
: <
http://trac.webkit.org/changeset/102592
>
WebKit Review Bot
Comment 4
2011-12-12 09:30:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug