[Qt] Missing layoutTestController.dumpWillCacheResponse https://bugs.webkit.org/show_bug.cgi?id=74287

Patch by Nándor Huszka <huszka.nandor@stud.u-szeged.hu> on 2011-12-12
Reviewed by Csaba Osztrogonác.

Source/WebKit/qt:

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::dumpWillCacheResponseCallbacks):
* WebCoreSupport/DumpRenderTreeSupportQt.h:
* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::dispatchDidReceiveResponse):
* WebCoreSupport/FrameLoaderClientQt.h:

Tools:

* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::reset):
(LayoutTestController::dumpWillCacheResponse):
* DumpRenderTree/qt/LayoutTestControllerQt.h:

LayoutTests:

* platform/qt/Skipped: Unskip http/tests/misc/willCacheResponse-delegate-callback.html

Canonical link: https://commits.webkit.org/90990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102592 268f45cc-cd09-0410-ab3c-d52691b4dbfc